src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> S
Rule 1     S -> BlocoDecl BlocoPrograma
Rule 2     BlocoDecl -> Decl BlocoDecl
Rule 3     BlocoDecl -> <empty>
Rule 4     Decl -> int AtribList
Rule 5     AtribList -> AtribDecl ContAtrib
Rule 6     ContAtrib -> , AtribDecl ContAtrib
Rule 7     ContAtrib -> <empty>
Rule 8     AtribDecl -> id Atribution
Rule 9     AtribDecl -> id [ num ]
Rule 10    Atribution -> = Exp
Rule 11    Atribution -> <empty>
Rule 12    BlocoPrograma -> Programa BlocoPrograma
Rule 13    BlocoPrograma -> <empty>
Rule 14    Programa -> Ler
Rule 15    Programa -> Escrever
Rule 16    Programa -> AtribProg
Rule 17    Programa -> If
Rule 18    Programa -> While
Rule 19    Programa -> Repeat
Rule 20    Programa -> For
Rule 21    Ler -> read id
Rule 22    Ler -> read id [ Exp ]
Rule 23    Escrever -> print RelExp
Rule 24    AtribProg -> id = Exp
Rule 25    AtribProg -> id [ Exp ] = Exp
Rule 26    If -> if ( Cond ) { BlocoPrograma } Else
Rule 27    Else -> else { BlocoPrograma }
Rule 28    Else -> <empty>
Rule 29    While -> while ( Cond ) do { BlocoPrograma }
Rule 30    Repeat -> repeat { BlocoPrograma } until Cond
Rule 31    For -> for ( AtribFor ; Cond ; AtribProg ) do { BlocoPrograma }
Rule 32    AtribFor -> AtribProg
Rule 33    AtribFor -> <empty>
Rule 34    Cond -> Cond or Cond2
Rule 35    Cond -> Cond2
Rule 36    Cond2 -> Cond2 and Cond3
Rule 37    Cond2 -> Cond3
Rule 38    Cond3 -> not Cond
Rule 39    Cond3 -> RelExp
Rule 40    Cond3 -> ( Cond )
Rule 41    RelExp -> Exp > Exp
Rule 42    RelExp -> Exp < Exp
Rule 43    RelExp -> Exp Meq Exp
Rule 44    RelExp -> Exp meq Exp
Rule 45    RelExp -> Exp dif Exp
Rule 46    RelExp -> Exp eq Exp
Rule 47    RelExp -> Exp
Rule 48    Exp -> Exp + Termo
Rule 49    Exp -> Exp - Termo
Rule 50    Exp -> Termo
Rule 51    Termo -> Termo * Factor
Rule 52    Termo -> Termo / Factor
Rule 53    Termo -> Termo % Factor
Rule 54    Termo -> Factor
Rule 55    Factor -> ( Exp )
Rule 56    Factor -> num
Rule 57    Factor -> id
Rule 58    Factor -> id [ Exp ]

Terminals, with rules where they appear

%                    : 53
(                    : 26 29 31 40 55
)                    : 26 29 31 40 55
*                    : 51
+                    : 48
,                    : 6
-                    : 49
/                    : 52
;                    : 31 31
<                    : 42
=                    : 10 24 25
>                    : 41
Meq                  : 43
[                    : 9 22 25 58
]                    : 9 22 25 58
and                  : 36
dif                  : 45
do                   : 29 31
else                 : 27
eq                   : 46
error                : 
for                  : 31
id                   : 8 9 21 22 24 25 57 58
if                   : 26
int                  : 4
meq                  : 44
not                  : 38
num                  : 9 56
or                   : 34
print                : 23
read                 : 21 22
repeat               : 30
until                : 30
while                : 29
{                    : 26 27 29 30 31
}                    : 26 27 29 30 31

Nonterminals, with rules where they appear

AtribDecl            : 5 6
AtribFor             : 31
AtribList            : 4
AtribProg            : 16 31 32
Atribution           : 8
BlocoDecl            : 1 2
BlocoPrograma        : 1 12 26 27 29 30 31
Cond                 : 26 29 30 31 34 38 40
Cond2                : 34 35 36
Cond3                : 36 37
ContAtrib            : 5 6
Decl                 : 2
Else                 : 26
Escrever             : 15
Exp                  : 10 22 24 25 25 41 41 42 42 43 43 44 44 45 45 46 46 47 48 49 55 58
Factor               : 51 52 53 54
For                  : 20
If                   : 17
Ler                  : 14
Programa             : 12
RelExp               : 23 39
Repeat               : 19
S                    : 0
Termo                : 48 49 50 51 52 53
While                : 18

Parsing method: LALR

state 0

    (0) S' -> . S
    (1) S -> . BlocoDecl BlocoPrograma
    (2) BlocoDecl -> . Decl BlocoDecl
    (3) BlocoDecl -> .
    (4) Decl -> . int AtribList

    read            reduce using rule 3 (BlocoDecl -> .)
    print           reduce using rule 3 (BlocoDecl -> .)
    id              reduce using rule 3 (BlocoDecl -> .)
    if              reduce using rule 3 (BlocoDecl -> .)
    while           reduce using rule 3 (BlocoDecl -> .)
    repeat          reduce using rule 3 (BlocoDecl -> .)
    for             reduce using rule 3 (BlocoDecl -> .)
    $end            reduce using rule 3 (BlocoDecl -> .)
    int             shift and go to state 4

    S                              shift and go to state 1
    BlocoDecl                      shift and go to state 2
    Decl                           shift and go to state 3

state 1

    (0) S' -> S .



state 2

    (1) S -> BlocoDecl . BlocoPrograma
    (12) BlocoPrograma -> . Programa BlocoPrograma
    (13) BlocoPrograma -> .
    (14) Programa -> . Ler
    (15) Programa -> . Escrever
    (16) Programa -> . AtribProg
    (17) Programa -> . If
    (18) Programa -> . While
    (19) Programa -> . Repeat
    (20) Programa -> . For
    (21) Ler -> . read id
    (22) Ler -> . read id [ Exp ]
    (23) Escrever -> . print RelExp
    (24) AtribProg -> . id = Exp
    (25) AtribProg -> . id [ Exp ] = Exp
    (26) If -> . if ( Cond ) { BlocoPrograma } Else
    (29) While -> . while ( Cond ) do { BlocoPrograma }
    (30) Repeat -> . repeat { BlocoPrograma } until Cond
    (31) For -> . for ( AtribFor ; Cond ; AtribProg ) do { BlocoPrograma }

    $end            reduce using rule 13 (BlocoPrograma -> .)
    read            shift and go to state 14
    print           shift and go to state 16
    id              shift and go to state 15
    if              shift and go to state 17
    while           shift and go to state 18
    repeat          shift and go to state 19
    for             shift and go to state 20

    BlocoPrograma                  shift and go to state 5
    Programa                       shift and go to state 6
    Ler                            shift and go to state 7
    Escrever                       shift and go to state 8
    AtribProg                      shift and go to state 9
    If                             shift and go to state 10
    While                          shift and go to state 11
    Repeat                         shift and go to state 12
    For                            shift and go to state 13

state 3

    (2) BlocoDecl -> Decl . BlocoDecl
    (2) BlocoDecl -> . Decl BlocoDecl
    (3) BlocoDecl -> .
    (4) Decl -> . int AtribList

    read            reduce using rule 3 (BlocoDecl -> .)
    print           reduce using rule 3 (BlocoDecl -> .)
    id              reduce using rule 3 (BlocoDecl -> .)
    if              reduce using rule 3 (BlocoDecl -> .)
    while           reduce using rule 3 (BlocoDecl -> .)
    repeat          reduce using rule 3 (BlocoDecl -> .)
    for             reduce using rule 3 (BlocoDecl -> .)
    $end            reduce using rule 3 (BlocoDecl -> .)
    int             shift and go to state 4

    Decl                           shift and go to state 3
    BlocoDecl                      shift and go to state 21

state 4

    (4) Decl -> int . AtribList
    (5) AtribList -> . AtribDecl ContAtrib
    (8) AtribDecl -> . id Atribution
    (9) AtribDecl -> . id [ num ]

    id              shift and go to state 24

    AtribList                      shift and go to state 22
    AtribDecl                      shift and go to state 23

state 5

    (1) S -> BlocoDecl BlocoPrograma .

    $end            reduce using rule 1 (S -> BlocoDecl BlocoPrograma .)


state 6

    (12) BlocoPrograma -> Programa . BlocoPrograma
    (12) BlocoPrograma -> . Programa BlocoPrograma
    (13) BlocoPrograma -> .
    (14) Programa -> . Ler
    (15) Programa -> . Escrever
    (16) Programa -> . AtribProg
    (17) Programa -> . If
    (18) Programa -> . While
    (19) Programa -> . Repeat
    (20) Programa -> . For
    (21) Ler -> . read id
    (22) Ler -> . read id [ Exp ]
    (23) Escrever -> . print RelExp
    (24) AtribProg -> . id = Exp
    (25) AtribProg -> . id [ Exp ] = Exp
    (26) If -> . if ( Cond ) { BlocoPrograma } Else
    (29) While -> . while ( Cond ) do { BlocoPrograma }
    (30) Repeat -> . repeat { BlocoPrograma } until Cond
    (31) For -> . for ( AtribFor ; Cond ; AtribProg ) do { BlocoPrograma }

    $end            reduce using rule 13 (BlocoPrograma -> .)
    }               reduce using rule 13 (BlocoPrograma -> .)
    read            shift and go to state 14
    print           shift and go to state 16
    id              shift and go to state 15
    if              shift and go to state 17
    while           shift and go to state 18
    repeat          shift and go to state 19
    for             shift and go to state 20

    Programa                       shift and go to state 6
    BlocoPrograma                  shift and go to state 25
    Ler                            shift and go to state 7
    Escrever                       shift and go to state 8
    AtribProg                      shift and go to state 9
    If                             shift and go to state 10
    While                          shift and go to state 11
    Repeat                         shift and go to state 12
    For                            shift and go to state 13

state 7

    (14) Programa -> Ler .

    read            reduce using rule 14 (Programa -> Ler .)
    print           reduce using rule 14 (Programa -> Ler .)
    id              reduce using rule 14 (Programa -> Ler .)
    if              reduce using rule 14 (Programa -> Ler .)
    while           reduce using rule 14 (Programa -> Ler .)
    repeat          reduce using rule 14 (Programa -> Ler .)
    for             reduce using rule 14 (Programa -> Ler .)
    $end            reduce using rule 14 (Programa -> Ler .)
    }               reduce using rule 14 (Programa -> Ler .)


state 8

    (15) Programa -> Escrever .

    read            reduce using rule 15 (Programa -> Escrever .)
    print           reduce using rule 15 (Programa -> Escrever .)
    id              reduce using rule 15 (Programa -> Escrever .)
    if              reduce using rule 15 (Programa -> Escrever .)
    while           reduce using rule 15 (Programa -> Escrever .)
    repeat          reduce using rule 15 (Programa -> Escrever .)
    for             reduce using rule 15 (Programa -> Escrever .)
    $end            reduce using rule 15 (Programa -> Escrever .)
    }               reduce using rule 15 (Programa -> Escrever .)


state 9

    (16) Programa -> AtribProg .

    read            reduce using rule 16 (Programa -> AtribProg .)
    print           reduce using rule 16 (Programa -> AtribProg .)
    id              reduce using rule 16 (Programa -> AtribProg .)
    if              reduce using rule 16 (Programa -> AtribProg .)
    while           reduce using rule 16 (Programa -> AtribProg .)
    repeat          reduce using rule 16 (Programa -> AtribProg .)
    for             reduce using rule 16 (Programa -> AtribProg .)
    $end            reduce using rule 16 (Programa -> AtribProg .)
    }               reduce using rule 16 (Programa -> AtribProg .)


state 10

    (17) Programa -> If .

    read            reduce using rule 17 (Programa -> If .)
    print           reduce using rule 17 (Programa -> If .)
    id              reduce using rule 17 (Programa -> If .)
    if              reduce using rule 17 (Programa -> If .)
    while           reduce using rule 17 (Programa -> If .)
    repeat          reduce using rule 17 (Programa -> If .)
    for             reduce using rule 17 (Programa -> If .)
    $end            reduce using rule 17 (Programa -> If .)
    }               reduce using rule 17 (Programa -> If .)


state 11

    (18) Programa -> While .

    read            reduce using rule 18 (Programa -> While .)
    print           reduce using rule 18 (Programa -> While .)
    id              reduce using rule 18 (Programa -> While .)
    if              reduce using rule 18 (Programa -> While .)
    while           reduce using rule 18 (Programa -> While .)
    repeat          reduce using rule 18 (Programa -> While .)
    for             reduce using rule 18 (Programa -> While .)
    $end            reduce using rule 18 (Programa -> While .)
    }               reduce using rule 18 (Programa -> While .)


state 12

    (19) Programa -> Repeat .

    read            reduce using rule 19 (Programa -> Repeat .)
    print           reduce using rule 19 (Programa -> Repeat .)
    id              reduce using rule 19 (Programa -> Repeat .)
    if              reduce using rule 19 (Programa -> Repeat .)
    while           reduce using rule 19 (Programa -> Repeat .)
    repeat          reduce using rule 19 (Programa -> Repeat .)
    for             reduce using rule 19 (Programa -> Repeat .)
    $end            reduce using rule 19 (Programa -> Repeat .)
    }               reduce using rule 19 (Programa -> Repeat .)


state 13

    (20) Programa -> For .

    read            reduce using rule 20 (Programa -> For .)
    print           reduce using rule 20 (Programa -> For .)
    id              reduce using rule 20 (Programa -> For .)
    if              reduce using rule 20 (Programa -> For .)
    while           reduce using rule 20 (Programa -> For .)
    repeat          reduce using rule 20 (Programa -> For .)
    for             reduce using rule 20 (Programa -> For .)
    $end            reduce using rule 20 (Programa -> For .)
    }               reduce using rule 20 (Programa -> For .)


state 14

    (21) Ler -> read . id
    (22) Ler -> read . id [ Exp ]

    id              shift and go to state 26


state 15

    (24) AtribProg -> id . = Exp
    (25) AtribProg -> id . [ Exp ] = Exp

    =               shift and go to state 27
    [               shift and go to state 28


state 16

    (23) Escrever -> print . RelExp
    (41) RelExp -> . Exp > Exp
    (42) RelExp -> . Exp < Exp
    (43) RelExp -> . Exp Meq Exp
    (44) RelExp -> . Exp meq Exp
    (45) RelExp -> . Exp dif Exp
    (46) RelExp -> . Exp eq Exp
    (47) RelExp -> . Exp
    (48) Exp -> . Exp + Termo
    (49) Exp -> . Exp - Termo
    (50) Exp -> . Termo
    (51) Termo -> . Termo * Factor
    (52) Termo -> . Termo / Factor
    (53) Termo -> . Termo % Factor
    (54) Termo -> . Factor
    (55) Factor -> . ( Exp )
    (56) Factor -> . num
    (57) Factor -> . id
    (58) Factor -> . id [ Exp ]

    (               shift and go to state 33
    num             shift and go to state 34
    id              shift and go to state 35

    RelExp                         shift and go to state 29
    Exp                            shift and go to state 30
    Termo                          shift and go to state 31
    Factor                         shift and go to state 32

state 17

    (26) If -> if . ( Cond ) { BlocoPrograma } Else

    (               shift and go to state 36


state 18

    (29) While -> while . ( Cond ) do { BlocoPrograma }

    (               shift and go to state 37


state 19

    (30) Repeat -> repeat . { BlocoPrograma } until Cond

    {               shift and go to state 38


state 20

    (31) For -> for . ( AtribFor ; Cond ; AtribProg ) do { BlocoPrograma }

    (               shift and go to state 39


state 21

    (2) BlocoDecl -> Decl BlocoDecl .

    read            reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)
    print           reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)
    id              reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)
    if              reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)
    while           reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)
    repeat          reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)
    for             reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)
    $end            reduce using rule 2 (BlocoDecl -> Decl BlocoDecl .)


state 22

    (4) Decl -> int AtribList .

    int             reduce using rule 4 (Decl -> int AtribList .)
    read            reduce using rule 4 (Decl -> int AtribList .)
    print           reduce using rule 4 (Decl -> int AtribList .)
    id              reduce using rule 4 (Decl -> int AtribList .)
    if              reduce using rule 4 (Decl -> int AtribList .)
    while           reduce using rule 4 (Decl -> int AtribList .)
    repeat          reduce using rule 4 (Decl -> int AtribList .)
    for             reduce using rule 4 (Decl -> int AtribList .)
    $end            reduce using rule 4 (Decl -> int AtribList .)


state 23

    (5) AtribList -> AtribDecl . ContAtrib
    (6) ContAtrib -> . , AtribDecl ContAtrib
    (7) ContAtrib -> .

    ,               shift and go to state 41
    int             reduce using rule 7 (ContAtrib -> .)
    read            reduce using rule 7 (ContAtrib -> .)
    print           reduce using rule 7 (ContAtrib -> .)
    id              reduce using rule 7 (ContAtrib -> .)
    if              reduce using rule 7 (ContAtrib -> .)
    while           reduce using rule 7 (ContAtrib -> .)
    repeat          reduce using rule 7 (ContAtrib -> .)
    for             reduce using rule 7 (ContAtrib -> .)
    $end            reduce using rule 7 (ContAtrib -> .)

    ContAtrib                      shift and go to state 40

state 24

    (8) AtribDecl -> id . Atribution
    (9) AtribDecl -> id . [ num ]
    (10) Atribution -> . = Exp
    (11) Atribution -> .

    [               shift and go to state 43
    =               shift and go to state 44
    ,               reduce using rule 11 (Atribution -> .)
    int             reduce using rule 11 (Atribution -> .)
    read            reduce using rule 11 (Atribution -> .)
    print           reduce using rule 11 (Atribution -> .)
    id              reduce using rule 11 (Atribution -> .)
    if              reduce using rule 11 (Atribution -> .)
    while           reduce using rule 11 (Atribution -> .)
    repeat          reduce using rule 11 (Atribution -> .)
    for             reduce using rule 11 (Atribution -> .)
    $end            reduce using rule 11 (Atribution -> .)

    Atribution                     shift and go to state 42

state 25

    (12) BlocoPrograma -> Programa BlocoPrograma .

    $end            reduce using rule 12 (BlocoPrograma -> Programa BlocoPrograma .)
    }               reduce using rule 12 (BlocoPrograma -> Programa BlocoPrograma .)


state 26

    (21) Ler -> read id .
    (22) Ler -> read id . [ Exp ]

    read            reduce using rule 21 (Ler -> read id .)
    print           reduce using rule 21 (Ler -> read id .)
    id              reduce using rule 21 (Ler -> read id .)
    if              reduce using rule 21 (Ler -> read id .)
    while           reduce using rule 21 (Ler -> read id .)
    repeat          reduce using rule 21 (Ler -> read id .)
    for             reduce using rule 21 (Ler -> read id .)
    $end            reduce using rule 21 (Ler -> read id .)
    }               reduce using rule 21 (Ler -> read id .)
    [               shift and go to state 45


state 27

    (24) AtribProg -> id = . Exp
    (48) Exp -> . Exp + Termo
    (49) Exp -> . Exp - Termo
    (50) Exp -> . Termo
    (51) Termo -> . Termo * Factor
    (52) Termo -> . Termo / Factor
    (53) Termo -> . Termo % Factor
    (54) Termo -> . Factor
    (55) Factor -> . ( Exp )
    (56) Factor -> . num
    (57) Factor -> . id
    (58) Factor -> . id [ Exp ]

    (               shift and go to state 33
    num             shift and go to state 34
    id              shift and go to state 35

    Exp                            shift and go to state 46
    Termo                          shift and go to state 31
    Factor                         shift and go to state 32

state 28

    (25) AtribProg -> id [ . Exp ] = Exp
    (48) Exp -> . Exp + Termo
    (49) Exp -> . Exp - Termo
    (50) Exp -> . Termo
    (51) Termo -> . Termo * Factor
    (52) Termo -> . Termo / Factor
    (53) Termo -> . Termo % Factor
    (54) Termo -> . Factor
    (55) Factor -> . ( Exp )
    (56) Factor -> . num
    (57) Factor -> . id
    (58) Factor -> . id [ Exp ]

    (               shift and go to state 33
    num             shift and go to state 34
    id              shift and go to state 35

    Exp                            shift and go to state 47
    Termo                          shift and go to state 31
    Factor                         shift and go to state 32

state 29

    (23) Escrever -> print RelExp .

    read            reduce using rule 23 (Escrever -> print RelExp .)
    print           reduce using rule 23 (Escrever -> print RelExp .)
    id              reduce using rule 23 (Escrever -> print RelExp .)
    if              reduce using rule 23 (Escrever -> print RelExp .)
    while           reduce using rule 23 (Escrever -> print RelExp .)
    repeat          reduce using rule 23 (Escrever -> print RelExp .)
    for             reduce using rule 23 (Escrever -> print RelExp .)
    $end            reduce using rule 23 (Escrever -> print RelExp .)
    }               reduce using rule 23 (Escrever -> print RelExp .)


state 30

    (41) RelExp -> Exp . > Exp
    (42) RelExp -> Exp . < Exp
    (43) RelExp -> Exp . Meq Exp
    (44) RelExp -> Exp . meq Exp
    (45) RelExp -> Exp . dif Exp
    (46) RelExp -> Exp . eq Exp
    (47) RelExp -> Exp .
    (48) Exp -> Exp . + Termo
    (49) Exp -> Exp . - Termo

    >               shift and go to state 48
    <               shift and go to state 49
    Meq             shift and go to state 50
    meq             shift and go to state 51
    dif             shift and go to state 52
    eq              shift and go to state 53
    read            reduce using rule 47 (RelExp -> Exp .)
    print           reduce using rule 47 (RelExp -> Exp .)
    id              reduce using rule 47 (RelExp -> Exp .)
    if              reduce using rule 47 (RelExp -> Exp .)
    while           reduce using rule 47 (RelExp -> Exp .)
    repeat          reduce using rule 47 (RelExp -> Exp .)
    for             reduce using rule 47 (RelExp -> Exp .)
    $end            reduce using rule 47 (RelExp -> Exp .)
    }               reduce using rule 47 (RelExp -> Exp .)
    and             reduce using rule 47 (RelExp -> Exp .)
    )               reduce using rule 47 (RelExp -> Exp .)
    or              reduce using rule 47 (RelExp -> Exp .)
    ;               reduce using rule 47 (RelExp -> Exp .)
    +               shift and go to state 54
    -               shift and go to state 55


state 31

    (50) Exp -> Termo .
    (51) Termo -> Termo . * Factor
    (52) Termo -> Termo . / Factor
    (53) Termo -> Termo . % Factor

    >               reduce using rule 50 (Exp -> Termo .)
    <               reduce using rule 50 (Exp -> Termo .)
    Meq             reduce using rule 50 (Exp -> Termo .)
    meq             reduce using rule 50 (Exp -> Termo .)
    dif             reduce using rule 50 (Exp -> Termo .)
    eq              reduce using rule 50 (Exp -> Termo .)
    +               reduce using rule 50 (Exp -> Termo .)
    -               reduce using rule 50 (Exp -> Termo .)
    read            reduce using rule 50 (Exp -> Termo .)
    print           reduce using rule 50 (Exp -> Termo .)
    id              reduce using rule 50 (Exp -> Termo .)
    if              reduce using rule 50 (Exp -> Termo .)
    while           reduce using rule 50 (Exp -> Termo .)
    repeat          reduce using rule 50 (Exp -> Termo .)
    for             reduce using rule 50 (Exp -> Termo .)
    $end            reduce using rule 50 (Exp -> Termo .)
    }               reduce using rule 50 (Exp -> Termo .)
    ;               reduce using rule 50 (Exp -> Termo .)
    )               reduce using rule 50 (Exp -> Termo .)
    ]               reduce using rule 50 (Exp -> Termo .)
    and             reduce using rule 50 (Exp -> Termo .)
    or              reduce using rule 50 (Exp -> Termo .)
    ,               reduce using rule 50 (Exp -> Termo .)
    int             reduce using rule 50 (Exp -> Termo .)
    *               shift and go to state 56
    /               shift and go to state 57
    %               shift and go to state 58


state 32

    (54) Termo -> Factor .
